fixed navigation on mobile for schedule page

--- a/src/pages/schedule.module.css
+++ b/src/pages/schedule.module.css
@@ -365,5 +365,9 @@
     .appointment{
         width: 200px;
     }
+
+    .navigation > *{
+        margin: 0px !important;
+    }
     
 }
